# futelt

./: .gitignore  Cargo.toml  README.md
apps/web/: Cargo.toml
crates/domain/src/: lib.rs
services/api/: Cargo.toml
services/api/src/: main.rs
services/api/templates/: index.html
