[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
domain = { version = "0.1.0", path = "../../crates/domain" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }

sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"]}